[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bokeh-cdsflow"
version = "0.1.${{X}}"
description = "Third-party extension for advanced linking of Bokeh CDSs; not affiliated with the Bokeh project."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
email = "casperbekkers@hotmail.com"
authors = [{ name = "Casper Bekkers" }]
keywords = ["bokeh", "cds", "column-data-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "bokeh>=3.9,<4",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/Flippet3/bokeh-cdsflow"
Repository = "https://github.com/Flippet3/bokeh-cdsflow"
Issues = "https://github.com/Flippet3/bokeh-cdsflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bokeh_cdsflow"]

[tool.hatch.build.targets.sdist]
include = ["src/bokeh_cdsflow", "README.md", "LICENSE"]
